package edu.fiuba.algo3.modelo;

public class Vehiculos {

    public void mover_vehiculo(Direccion direccion){

    }

    public void cambiar_direccion_calle(EntreCalle nueva_direccion){

    }
}
